# talos

./: README.md  ego-projects.json  package.json
canisters/: Cargo.toml
canisters/dapp/talos/actor/: Cargo.toml
canisters/dapp/talos/actor/src/: actor.rs  mod.rs
canisters/dapp/talos/mod/: Cargo.toml
canisters/dapp/talos/mod/src/: memory.rs  mod.rs  service.rs  state.rs  types.rs  utils.rs
canisters/dapp/talos/mod/src/http/: configuration.rs  mod.rs  payload.rs
canisters/dapp/talos_oracles/actor/: Cargo.toml
canisters/dapp/talos_oracles/actor/src/: actor.rs
canisters/dapp/talos_oracles/mod/: Cargo.toml
canisters/dapp/talos_oracles/mod/src/: types.rs
canisters/dapp/talos_staking_wallet/actor/: Cargo.toml
canisters/dapp/talos_staking_wallet/actor/src/: actor.rs  mod.rs
canisters/dapp/talos_staking_wallet/mod/: Cargo.toml
canisters/dapp/talos_staking_wallet/mod/src/: memory.rs  mod.rs  service.rs  state.rs  types.rs  utils.rs
canisters/dapp/talos_staking_wallet/mod/src/babylon/: mod.rs
canisters/dapp/talos_staking_wallet/mod/src/core_dao/: mod.rs
canisters/dapp/talos_token/actor/: Cargo.toml
canisters/dapp/talos_token/actor/src/: actor.rs
canisters/dapp/talos_token/mod/: Cargo.toml
canisters/dapp/talos_token/mod/src/: state.rs
canisters/libs/ic_tss/: Cargo.toml
canisters/libs/ic_tss/src/ecdsa/: mod.rs
canisters/libs/ic_tss/src/schnorr/: mod.rs
canisters/libs/ordinals/: Cargo.toml
canisters/libs/ordinals/src/: cenotaph.rs  charm.rs  edict.rs  etching.rs  flaw.rs  height.rs  lib.rs  pile.rs  rune.rs  rune_id.rs  runestone.rs  sat.rs  spaced_rune.rs  terms.rs  varint.rs
canisters/libs/ordinals/src/runestone/: flag.rs  message.rs  tag.rs
canisters/libs/talos_types/: Cargo.toml
canisters/libs/talos_types/src/: mod.rs  types.rs
clients/dapp/talos-web/: .env  .gitignore  canister_ids.json  dfx.json  index.html  package.json  tailwind.config.cjs  vite.config.ts
clients/dapp/talos-web/public/.well-known/: ic-domains
clients/dapp/talos-web/src/: TalosApp.tsx  extend.less  main.tsx
clients/dapp/talos-web/src/canister/: index.ts
clients/dapp/talos-web/src/canister/talos/: talos.d.ts  talos_staking_wallet.d.ts  talos_staking_wallet.idl.ts
clients/dapp/talos-web/src/component/: ConnectButton.tsx  EntryGlobal.tsx  FeeRateSelector.tsx  Logo.tsx  RainbowConnectButton.tsx  ThemeButton.tsx  TokenIcons.tsx
clients/dapp/talos-web/src/hook/: index.ts
clients/dapp/talos-web/src/service/: api.ts
clients/dapp/talos-web/src/service/ordx/: api.ts  hooks.ts  types.ts
clients/dapp/talos-web/src/service/stake/: api.ts  hooks.ts  types.ts
clients/dapp/talos-web/src/staking/: index.ts  op.ts
clients/dapp/talos-web/src/store/: balance.ts  global.ts  index.ts
clients/dapp/talos-web/src/ui/Main/: index.less  index.tsx
clients/dapp/talos-web/src/ui/Page/: index.tsx
clients/dapp/talos-web/src/ui/Staking/: CoreStaking.tsx  TalosStaking.tsx  TxModal.tsx  consts.ts
clients/dapp/talos-web/src/utils/: index.ts
clients/idls/: talos.d.ts  talos.idl.ts  talos_staking_wallet.d.ts  talos_staking_wallet.idl.ts
clients/scripts/: console.test.ts  talos.test.ts
configs/: mainnet.json
