[workspace]
members = [
    "dapp/talos/actor",
    "dapp/talos/mod",
    "dapp/talos_staking_wallet/actor",
    "dapp/talos_staking_wallet/mod",
    "libs/ic_tss",
    "libs/ordinals",
    "libs/talos_types",
]

resolver = "2"

[workspace.dependencies]
# inner
talos_types = { path = "libs/talos_types" }
ic_tss = { path = "libs/ic_tss" }


candid = "0.9.2"
ic-cdk = { version = "0.10.0" }
ic-cdk-timers = "0.4.0"
ic-cdk-macros = "0.7.1"
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"
serde_cbor = "0.11.2"
ic-ledger-types = "0.7.0"
ic-stable-structures = "0.6.0"
ic-certified-map = "0.4.0"
icrc-ledger-types = "0.1.4"
ciborium = "0.2.1"
uuid = { version = "1.8.0", features = ["v8"] }

ego_types = { git = "https://github.com/EgoDevs/ego", branch = "main" }
ego_macros = { git = "https://github.com/EgoDevs/ego", branch = "main" }
ego_lib = { git = "https://github.com/EgoDevs/ego", branch = "main" }
ego_utils = { git = "https://github.com/EgoDevs/ego", branch = "main" }
ego_inner_rpc = { git = "https://github.com/EgoDevs/ego", branch = "main" }


async-trait = "0.1.57"

md5 = "0.7.0"
rand = "0.8.5"
getrandom = { version = "0.2.8", features = ["js"] }
ed25519-dalek = "2.1"

hex = "0.4.3"
hex-literal = "0.4.1"
itertools = "0.11.0"

mockall = "0.11.2"
tokio = { version = "1.21.0", features = ["full"] }
sha2 = "0.10.6"
hyper = { version = "0.14.24", features = ["client", "http2", "tcp"] }

multibase = "0.9.1"
bitcoin = { version = "0.30.2", features = ["serde", "base64"] }
serde_with = "3.8.1"

[profile.release]
lto = true
debug = true
opt-level = 'z'
