[package]
name = "ordinals"
version = "0.0.5"
edition = "2021"
description = "Library for interoperating with ordinals and inscriptions"
homepage = "https://github.com/ordinals/ord"
repository = "https://github.com/ordinals/ord"
license = "CC0-1.0"
rust-version = "1.67"

[dependencies]
bitcoin = { workspace = true }
derive_more = "0.99.17"
serde = { workspace = true }
serde_with = { workspace = true }
thiserror = "1.0.56"
candid = { workspace = true }
[dev-dependencies]
serde_json = { version = "1.0.81", features = ["preserve_order"] }
pretty_assertions = "1.2.1"
candid = { workspace = true }