[package]
name = "talos_staking_wallet_mod"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/mod.rs"
crate-type = ["lib"]

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
ciborium = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-certified-map = { workspace = true }
ic-stable-structures = { workspace = true }
serde_bytes = { workspace = true }
serde = { workspace = true }
itertools = { workspace = true }
ego_types = { workspace = true }
ego_lib = { workspace = true }
ego_macros = { workspace = true }
hex = { workspace = true }
talos_types = { workspace = true }
sha2 = { workspace = true }
ic_tss = { workspace = true }
bitcoin = { workspace = true }
serde_json = { workspace = true }


[dev-dependencies]
hyper = { workspace = true }
tokio = { workspace = true }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
hyper-tls = { version = "0.6.0" }

[features]
default = []
debug = []

